--- a/New Website/style.css
+++ b/New Website/style.css
@@ -1,11 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
+
+
 * {
     padding: 0;
     margin: 0;
-    font-family: sans-serif;
 }
 
 body {
-    background-image: linear-gradient(to top, #313131, #1e1e1e);
+    background-color: #1e1e1e;
+    font-family: 'montserrat', sans-serif;
 }
 
 header {
@@ -15,6 +20,9 @@ header {
     display: flex;
     justify-content: left;
     align-items: center;
+
+    padding-bottom: 60px;
+    padding-top: 20px;
 }
 
 #gur-link {
@@ -32,48 +40,59 @@ header {
     height: 200px;
 }
 
-.body {
-    height: 80vh;
+.main-container {
     transition-duration: 2s;
     transition: opacity 0.5s;
     margin-left: 10px;
     margin-right: 10px;
 }
 
+.results-title-container {
+    display: flex;
+}
+
 .results-title {
-    color: #04eefe;
+    color: #00c8ff;
     font-size: 50px;
-    margin-bottom: 20px;
+    margin-bottom: 100px;
     font-weight: bolder;
+    flex: 1;
 }
 
-#results-body {
+#results-container {
     display: none;
-}
-
-#listed-results {
-    width: 40vw;
+    margin-left: 20px;
 }
 
 #code-results {
-    overflow-y: scroll;
-    overflow-wrap: normal;
-    width: 60vw;
     color: #dbdbdb;
-}
-
-.results-header {
-    color: #49b1fe; 
-    font-size: 25px;
-    line-height: 50px;
-    font-weight: bold;
+    font-size: 12px;
+    font-family: monospace;
 }
 
 .results {
     color: #dbdbdb;
     font-size: 18px;
     font-weight: lighter;
+    
 }
+
+#welcome {
+    height: 60px;
+    padding: 0;
+    width: 740px;
+    text-align: center;
+    color: #dbdbdb;
+    font-size: 40px;
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: 2px solid rgb(0, 225, 255); /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .26em; /* Adjust as needed */
+    animation: 
+      typing 3s steps(23, end),
+      blink-caret 1s step-end infinite;
+  }
 
 .description {
     padding: 200px 20px 20px 20px;
@@ -107,9 +126,20 @@ input[type="file"] {
     margin-top: 60px;
     transition-duration: 0.5s;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 #file-input-label:hover {
     color: white;
 }
 
+@keyframes typing {
+    from { width: 0 }
+    to { width: 800px }
+  }
+  
+  
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: rgb(0, 225, 255); }
+  }
