--- a/website/style.css
+++ b/website/style.css
@@ -159,8 +159,11 @@ header {
     font-weight: bolder;
     border-radius: 12px;
     margin-top: 10px;
+    margin-left: 2px;
+    margin-right: 2px;
     transition-duration: 0.5s;
     cursor: pointer;
+    border: 3px solid #242424;
 }
 
 #bigger-button-label {
@@ -202,6 +205,15 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.options-container {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 75px;
+    background: #3c3c3c;
 }
 
 #file-input-label:hover {
